# Vroom

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
Projects/Template/macOS/: Template.code-workspace  shared-scripts.sh
Projects/Template/macOS/assets/shaders/opengl/: raymarch.frag  raymarch.vert
Projects/Template/macOS/console/: CMakeLists.txt  build.sh  cmake-post-build.sh  setup.sh
Projects/Template/macOS/emscripten/: CMakeLists.txt  build.sh  cmake-post-build.sh  setup.sh
Projects/Template/macOS/iOS/: project.yml  setup.sh
Projects/Template/macOS/iOS/Template.xcodeproj/: project.pbxproj
Projects/Template/macOS/iOS/Template.xcodeproj/xcshareddata/xcschemes/: Template.xcscheme
Projects/Template/macOS/macOS/: project.yml  setup.sh
Projects/Template/macOS/macOS/Template.xcodeproj/: project.pbxproj
Projects/Template/macOS/src/: main.cpp
Projects/Template/macOS/src/application/: application.cpp  application.hpp  engine.cpp  engine.hpp  opengl-application.cpp  opengl-application.hpp
Projects/Template/macOS/src/assets/: core-sdfs.cpp  core-sdfs.hpp  folder.cpp  folder.hpp  instance.cpp  instance.hpp  object.cpp  object.hpp  sdf.cpp  sdf.hpp  workspace.cpp  workspace.hpp  world-root.cpp  world-root.hpp
Projects/Template/macOS/src/debug/: debug.cpp  debug.hpp
Projects/Template/macOS/src/graphics/: camera.cpp  camera.hpp  opengl-pipeline.cpp  opengl-pipeline.hpp
Projects/Template/macOS/src/logic/: compose.hpp  event.hpp  function.hpp
Projects/Template/macOS/src/platform/: assets.cpp  assets.hpp  glm-wrapper.hpp  graphics-wrapper.hpp  platform.cpp  platform.hpp  sdl-wrapper.cpp  sdl-wrapper.hpp
Projects/Template/macOS/src/project/: project.cpp  project.hpp
Projects/Template/macOS/src/services/: runservice-container.hpp  runservice.hpp  service.hpp  tweenservice-container.hpp
(+4 files in other folders)
